# curs6_django_hws

./: README.md  catalog.json  pyproject.toml
19_1/: index.html  my_web_app.py
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill_bd.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_image.py  0003_alter_category_description_alter_category_name_and_more.py  0004_blogrecord_alter_category_name_and_more.py  0005_contacts.py  0006_alter_blogrecord_is_published.py  0007_alter_contacts_options_alter_blogrecord_count.py  0008_alter_blogrecord_slug.py  0009_blogrecord_updated_at.py  0010_version.py  0011_alter_version_num_vers_alter_version_product.py  0012_alter_version_num_vers.py  0013_alter_version_num_vers.py  0014_alter_version_is_current_vers.py  0015_alter_version_num_vers.py
catalog/templates/: base.html  contacts.html  product.html
catalog/templates/catalog/: base.html  blogrecord_confirm_delete.html  blogrecord_detail.html  blogrecord_form.html  blogrecord_list.html  category_detail.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_category.html
catalog/templates/includes/: inc_category.html  inc_menu.html
config/: settings.py  urls.py
